added function namespaces and updated chapter 2

--- a/02/presto-kubernetes/presto-secrets.yaml
+++ b/02/presto-kubernetes/presto-secrets.yaml
@@ -4,7 +4,7 @@ stringData:
   mysql.properties: |-
     connector.name=mysql
     connection-url=jdbc:mysql://mysql:3306
-    connection-user=dbuser
+    connection-user=root
     connection-password=dbuser
 kind: Secret
 metadata: 
