--- a/03/presto-and-pinot/presto-secrets.yaml
+++ b/03/presto-and-pinot/presto-secrets.yaml
@@ -4,7 +4,7 @@ stringData:
   mysql.properties: |-
     connector.name=mysql
     connection-url=jdbc:mysql://mysql:3306
-    connection-user=dbuser
+    connection-user=root
     connection-password=dbuser
 kind: Secret
 metadata: 
